@@ -101,60 +101,60 @@ main (int argc, char **argv)
   vars["LEXLIB"] = %OCTAVE_CONF_LEXLIB%;
   vars["LIBGLOB"] = %OCTAVE_CONF_LIBGLOB%;
 
-  vars["AMD_CPPFLAGS"] = %AMD_CPPFLAGS%;
-  vars["AMD_LDFLAGS"] = %AMD_LDFLAGS%;
-  vars["AMD_LIBS"] = %AMD_LIBS%;
-  vars["ARPACK_LIBS"] = %ARPACK_LIBS%;
-  vars["BLAS_LIBS"] = %BLAS_LIBS%;
-  vars["CAMD_CPPFLAGS"] = %CAMD_CPPFLAGS%;
-  vars["CAMD_LDFLAGS"] = %CAMD_LDFLAGS%;
-  vars["CAMD_LIBS"] = %CAMD_LIBS%;
-  vars["CARBON_LIBS"] = %CARBON_LIBS%;
-  vars["CCOLAMD_CPPFLAGS"] = %CCOLAMD_CPPFLAGS%;
-  vars["CCOLAMD_LDFLAGS"] = %CCOLAMD_LDFLAGS%;
-  vars["CCOLAMD_LIBS"] = %CCOLAMD_LIBS%;
-  vars["CHOLMOD_CPPFLAGS"] = %CHOLMOD_CPPFLAGS%;
-  vars["CHOLMOD_LDFLAGS"] = %CHOLMOD_LDFLAGS%;
-  vars["CHOLMOD_LIBS"] = %CHOLMOD_LIBS%;
-  vars["COLAMD_CPPFLAGS"] = %COLAMD_CPPFLAGS%;
-  vars["COLAMD_LDFLAGS"] = %COLAMD_LDFLAGS%;
-  vars["COLAMD_LIBS"] = %COLAMD_LIBS%;
-  vars["CURL_CPPFLAGS"] = %CURL_CPPFLAGS%;
-  vars["CURL_LDFLAGS"] = %CURL_LDFLAGS%;
-  vars["CURL_LIBS"] = %CURL_LIBS%;
-  vars["CXSPARSE_CPPFLAGS"] = %CXSPARSE_CPPFLAGS%;
-  vars["CXSPARSE_LDFLAGS"] = %CXSPARSE_LDFLAGS%;
-  vars["CXSPARSE_LIBS"] = %CXSPARSE_LIBS%;
-  vars["DL_LIBS"] = %DL_LIBS%;
-  vars["FFTW3_CPPFLAGS"] = %FFTW3_CPPFLAGS%;
-  vars["FFTW3_LDFLAGS"] = %FFTW3_LDFLAGS%;
-  vars["FFTW3_LIBS"] = %FFTW3_LIBS%;
-  vars["FFTW3F_CPPFLAGS"] = %FFTW3F_CPPFLAGS%;
-  vars["FFTW3F_LDFLAGS"] = %FFTW3F_LDFLAGS%;
-  vars["FFTW3F_LIBS"] = %FFTW3F_LIBS%;
-  vars["GRAPHICS_LIBS"] = %GRAPHICS_LIBS%;
-  vars["GLPK_CPPFLAGS"] = %GLPK_CPPFLAGS%;
-  vars["GLPK_LDFLAGS"] = %GLPK_LDFLAGS%;
-  vars["GLPK_LIBS"] = %GLPK_LIBS%;
-  vars["HDF5_CPPFLAGS"] = %HDF5_CPPFLAGS%;
-  vars["HDF5_LDFLAGS"] = %HDF5_LDFLAGS%;
-  vars["HDF5_LIBS"] = %HDF5_LIBS%;
-  vars["OPENGL_LIBS"] = %OPENGL_LIBS%;
-  vars["PTHREAD_CFLAGS"] = %PTHREAD_CFLAGS%;
-  vars["PTHREAD_LIBS"] = %PTHREAD_LIBS%;
-  vars["QHULL_CPPFLAGS"] = %QHULL_CPPFLAGS%;
-  vars["QHULL_LDFLAGS"] = %QHULL_LDFLAGS%;
-  vars["QHULL_LIBS"] = %QHULL_LIBS%;
-  vars["QRUPDATE_LIBS"] = %QRUPDATE_LIBS%;
-  vars["READLINE_LIBS"] = %READLINE_LIBS%;
-  vars["REGEX_LIBS"] = %REGEX_LIBS%;
-  vars["TERM_LIBS"] = %TERM_LIBS%;
-  vars["UMFPACK_LIBS"] = %UMFPACK_LIBS%;
-  vars["X11_INCFLAGS"] = %X11_INCFLAGS%;
-  vars["X11_LIBS"] = %X11_LIBS%;
-  vars["Z_CPPFLAGS"] = %Z_CPPFLAGS%;
-  vars["Z_LDFLAGS"] = %Z_LDFLAGS%;
-  vars["Z_LIBS"] = %Z_LIBS%;
+  vars["AMD_CPPFLAGS"] = %OCTAVE_CONF_AMD_CPPFLAGS%;
+  vars["AMD_LDFLAGS"] = %OCTAVE_CONF_AMD_LDFLAGS%;
+  vars["AMD_LIBS"] = %OCTAVE_CONF_AMD_LIBS%;
+  vars["ARPACK_LIBS"] = %OCTAVE_CONF_ARPACK_LIBS%;
+  vars["BLAS_LIBS"] = %OCTAVE_CONF_BLAS_LIBS%;
+  vars["CAMD_CPPFLAGS"] = %OCTAVE_CONF_CAMD_CPPFLAGS%;
+  vars["CAMD_LDFLAGS"] = %OCTAVE_CONF_CAMD_LDFLAGS%;
+  vars["CAMD_LIBS"] = %OCTAVE_CONF_CAMD_LIBS%;
+  vars["CARBON_LIBS"] = %OCTAVE_CONF_CARBON_LIBS%;
+  vars["CCOLAMD_CPPFLAGS"] = %OCTAVE_CONF_CCOLAMD_CPPFLAGS%;
+  vars["CCOLAMD_LDFLAGS"] = %OCTAVE_CONF_CCOLAMD_LDFLAGS%;
+  vars["CCOLAMD_LIBS"] = %OCTAVE_CONF_CCOLAMD_LIBS%;
+  vars["CHOLMOD_CPPFLAGS"] = %OCTAVE_CONF_CHOLMOD_CPPFLAGS%;
+  vars["CHOLMOD_LDFLAGS"] = %OCTAVE_CONF_CHOLMOD_LDFLAGS%;
+  vars["CHOLMOD_LIBS"] = %OCTAVE_CONF_CHOLMOD_LIBS%;
+  vars["COLAMD_CPPFLAGS"] = %OCTAVE_CONF_COLAMD_CPPFLAGS%;
+  vars["COLAMD_LDFLAGS"] = %OCTAVE_CONF_COLAMD_LDFLAGS%;
+  vars["COLAMD_LIBS"] = %OCTAVE_CONF_COLAMD_LIBS%;
+  vars["CURL_CPPFLAGS"] = %OCTAVE_CONF_CURL_CPPFLAGS%;
+  vars["CURL_LDFLAGS"] = %OCTAVE_CONF_CURL_LDFLAGS%;
+  vars["CURL_LIBS"] = %OCTAVE_CONF_CURL_LIBS%;
+  vars["CXSPARSE_CPPFLAGS"] = %OCTAVE_CONF_CXSPARSE_CPPFLAGS%;
+  vars["CXSPARSE_LDFLAGS"] = %OCTAVE_CONF_CXSPARSE_LDFLAGS%;
+  vars["CXSPARSE_LIBS"] = %OCTAVE_CONF_CXSPARSE_LIBS%;
+  vars["DL_LIBS"] = %OCTAVE_CONF_DL_LIBS%;
+  vars["FFTW3_CPPFLAGS"] = %OCTAVE_CONF_FFTW3_CPPFLAGS%;
+  vars["FFTW3_LDFLAGS"] = %OCTAVE_CONF_FFTW3_LDFLAGS%;
+  vars["FFTW3_LIBS"] = %OCTAVE_CONF_FFTW3_LIBS%;
+  vars["FFTW3F_CPPFLAGS"] = %OCTAVE_CONF_FFTW3F_CPPFLAGS%;
+  vars["FFTW3F_LDFLAGS"] = %OCTAVE_CONF_FFTW3F_LDFLAGS%;
+  vars["FFTW3F_LIBS"] = %OCTAVE_CONF_FFTW3F_LIBS%;
+  vars["GRAPHICS_LIBS"] = %OCTAVE_CONF_GRAPHICS_LIBS%;
+  vars["GLPK_CPPFLAGS"] = %OCTAVE_CONF_GLPK_CPPFLAGS%;
+  vars["GLPK_LDFLAGS"] = %OCTAVE_CONF_GLPK_LDFLAGS%;
+  vars["GLPK_LIBS"] = %OCTAVE_CONF_GLPK_LIBS%;
+  vars["HDF5_CPPFLAGS"] = %OCTAVE_CONF_HDF5_CPPFLAGS%;
+  vars["HDF5_LDFLAGS"] = %OCTAVE_CONF_HDF5_LDFLAGS%;
+  vars["HDF5_LIBS"] = %OCTAVE_CONF_HDF5_LIBS%;
+  vars["OPENGL_LIBS"] = %OCTAVE_CONF_OPENGL_LIBS%;
+  vars["PTHREAD_CFLAGS"] = %OCTAVE_CONF_PTHREAD_CFLAGS%;
+  vars["PTHREAD_LIBS"] = %OCTAVE_CONF_PTHREAD_LIBS%;
+  vars["QHULL_CPPFLAGS"] = %OCTAVE_CONF_QHULL_CPPFLAGS%;
+  vars["QHULL_LDFLAGS"] = %OCTAVE_CONF_QHULL_LDFLAGS%;
+  vars["QHULL_LIBS"] = %OCTAVE_CONF_QHULL_LIBS%;
+  vars["QRUPDATE_LIBS"] = %OCTAVE_CONF_QRUPDATE_LIBS%;
+  vars["READLINE_LIBS"] = %OCTAVE_CONF_READLINE_LIBS%;
+  vars["REGEX_LIBS"] = %OCTAVE_CONF_REGEX_LIBS%;
+  vars["TERM_LIBS"] = %OCTAVE_CONF_TERM_LIBS%;
+  vars["UMFPACK_LIBS"] = %OCTAVE_CONF_UMFPACK_LIBS%;
+  vars["X11_INCFLAGS"] = %OCTAVE_CONF_X11_INCFLAGS%;
+  vars["X11_LIBS"] = %OCTAVE_CONF_X11_LIBS%;
+  vars["Z_CPPFLAGS"] = %OCTAVE_CONF_Z_CPPFLAGS%;
+  vars["Z_LDFLAGS"] = %OCTAVE_CONF_Z_LDFLAGS%;
+  vars["Z_LIBS"] = %OCTAVE_CONF_Z_LIBS%;
 
   vars["DEFS"] = %OCTAVE_CONF_DEFS%;
 
